2007-09-27 Jan Kryl (version 1.5.1)

	* Minor issues pointed by a coverity test were fixed.

2007-09-26 Jan Kryl (version 1.5.0)

	* New mechanism of creating poll message's content. The XML of message
	is created in mod_eppd and not in central register. Maintenance
	of XML generators scattered all over the central register was a
	nightmare.

	* Upon tcp connection close is called new CORBA function which signals
	this event to Central Register. Central register in response deletes
	a session entry from its table, so that it doesn't get overfilled by
	stale connections.

	* Bugfix in test_nsset function, which didn't properly incremented
	index in a list and led to segmentation fault.

	* XML response is send for archivation to central-register only if
	it has real svTRID assigned by Central register (otherwise the CR
	is not able to pair the response with request).

2007-09-19 Jan Kryl (version 1.4.4)

	* Remove bashism from Makefile (output redirection).

2007-07-26 Jaromir Talir (version 1.4.3)
	
	* Simple schema change.

2007-07-13 Jan Kryl (version 1.4.2)

	* Error messages triggered by XML validator were using namespaces
	which were not declared.

	* Bug in update of ident attribute was fixed. It was not possible
	to nullify ident attribute.

2007-06-25 Jan Kryl (version 1.4.1)

	* Viewport of client's document identifing an error was cut out
	without proper modifications, which resulted in usage of namespaces
	which were not defined. This is fixed now.

	* The input XML documents sent to central register for archivation
	are encoded in UTF-8. The old behaviour of sending the raw text
	could result in db insert failure, if the input was encoded in other
	than UTF-8 encoding.

	* The policy when required parameter is not returned from central
	register was changed. Mod_eppd generates invalid XML and logs the
	error.

	* The ident type birthday was not tranformed in output XML. This was
	fixed.
